--- a/.drone.yml
+++ b/.drone.yml
@@ -130,6 +130,6 @@ volumes:
   name: composer-cache
 ---
 kind: signature
-hmac: b3b4db4f85e9fe515b1d0c3156187af159993643ab6f4de1b38beb548d933008
+hmac: TODO
 
 ...
